syntax = "proto3";

import "google/api/annotations.proto";

package api.userdata.v1;

option go_package = "binance_dai_admin/api/userdata/v1;v1";
option java_multiple_files = true;
option java_package = "api.userdata.v1";

service Userdata {
	rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersReply) {
		option (google.api.http) = {
			get: "/api/binance_dai_admin/get_user_orders"
		};
	}

	rpc PullUserIncome (PullUserIncomeRequest) returns (PullUserIncomeReply) {
		option (google.api.http) = {
			get: "/api/binance_dai_admin/pull_user_incomes"
		};
	}

	rpc GetUsers (GetUsersRequest) returns (GetUsersReply) {
		option (google.api.http) = {
			get: "/api/binance_dai_admin/get_users"
		};
	}

	rpc GetUsersIncome (GetUsersIncomeRequest) returns (GetUsersIncomeReply) {
		option (google.api.http) = {
			get: "/api/binance_dai_admin/get_users_income"
		};
	}

	rpc UpdateUserNum (UpdateUserNumRequest) returns (UpdateUserNumReply) {
		option (google.api.http) = {
			get: "/api/binance_dai_admin/update_user_num"
		};
	}

	rpc GetNum (GetNumRequest) returns (GetNumReply) {
		option (google.api.http) = {
			get: "/api/binance_dai_admin/get_num"
		};
	}

	rpc UpdateNum (UpdateNumRequest) returns (UpdateNumReply) {
		option (google.api.http) = {
			get: "/api/binance_dai_admin/update_num"
		};
	}
}

message GetUserOrdersRequest {
}
message GetUserOrdersReply {
	int64 orderId = 1;
}

message PullUserIncomeRequest {
}
message PullUserIncomeReply {
}

message GetUsersRequest {
}

message GetUsersReply {
	repeated DataList list = 1;

	message DataList {
		string name = 5;
		uint64 userId = 1;
		string ip = 2;
		double num = 3;
	}
}

message GetUsersIncomeRequest {
	uint64 userId = 1;
	int64 start = 2;
	int64 end = 3;
}

message GetUsersIncomeReply {
	repeated DataList list = 1;

	message DataList {
		string symbol = 2;
		string income = 3;
		string time = 4;
	}
}

message UpdateUserNumRequest {
	uint64 userId = 1;
	double num = 2;
}

message UpdateUserNumReply {
}

message GetNumRequest {
}

message GetNumReply {
	repeated DataList list = 1;

	message DataList {
		string apiKey = 1;
		double num = 2;
	}
}

message UpdateNumRequest {
	string apiKey = 1;
	double num = 2;
}

message UpdateNumReply {
}